<resources>
    <string name="app_name">puzzleGame</string>
    <string name="action_settings">Settings</string>

    <string name="btn_back">返    回</string>
    <string name="btn_exit">退    出</string>
    <string name="btn_next">下一步</string>
    <string name="btn_save">保存</string>
    <string name="dialog_tips">提 示</string>
    <string name="btn_yes">确    定</string>
    <string name="btn_cancel">取    消</string>
    <string name="btn_change_device_name">修改设备名称</string>
    <string name="btn_cancel_discovery">停止搜索设备</string>

    <string name="wifiap_btn_connectwifi">连 接</string>
    <string name="wifiap_btn_createap">创建热点</string>
    <string name="wifiap_btn_closeap">关闭热点</string>
    <string name="wifiap_btn_connecting">正在连接 </string>
    <string name="wifiap_text_wifi_connected">已连接到 </string>
    <string name="wifiap_text_wifi_disconnect">WiFi连接已断开</string>
    <string name="wifiap_text_ap_1">已开启热点</string>
    <string name="wifiap_text_ap_0">热点已关闭</string>
    <string name="wifiap_text_wifi_0">WiFi未开启</string>
    <string name="wifiap_text_wifi_1_0">WiFi已开启，未连接</string>
    <string name="wifiap_dialog_createap_nonsupport">您的设备不支持热点创建</string>
    <string name="wifiap_text_createap_creating">正在创建热点&#8230;</string>
    <string name="wifiap_dialog_createap_closewifi_confirm">创建热点会关闭当前的WiFi，确认继续？</string>
    <string name="wifiap_dialog_closeap_confirm">您确定需要关闭热点？</string>
    <string name="wifiap_hint_connectap_pwd">请输入连接密码</string>
    <string name="wifiap_toast_connectap_unavailable">请创建热点或者连接一个热点</string>
    <string name="wifiap_toast_connectap_error">连接错误，请检查密码后再尝试连接。</string>
    <string name="wifiap_toast_connectap_error_1">连接错误，请尝试重新连接。</string>
    <string name="wifiap_text_createap_succeed">热点创建成功！</string>
    <string name="wifiap_diolog_showpwd">显示密码</string>


    <string name="connect_mode">请选择联机模式</string>
    <string name="connect_wifi">wifi模式</string>
    <string name="connect_bluetooth">蓝牙模式</string>


    <string name="gameroom_toast_logout">再按一次退出程序</string>
    <string name="gameroom_create">创建房间</string>
    <string name="gameroom_ready">准    备</string>
    <string name="gameroom_order">就    绪</string>
    <string name="gameroom_start">开    始</string>
    <string name="gameroom_sequence">顺序：</string>
    <string name="gameroom_emptyplayer">好像没有找到其他玩家在线喔，刷新试试吧</string>
    <string name="gameroom_haveplayer">当前房间的玩家人数：</string>
    <string name="gameroom_tip">(提示：游戏顺序是根据准备先后确定)</string>

    <string name="lv_refresh_head_load_more">加载更多</string>
    <string name="lv_refresh_end_load_more">更    多</string>
    <string name="lv_refresh_end_click_load_more">点击加载</string>
    <string name="lv_refresh_release_refresh">松开刷新</string>
    <string name="lv_refresh_pull_to_refresh">下拉刷新</string>
    <string name="lv_refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="lv_refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="lv_refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>

    <string name="game_cube">方形</string>
    <string name="game_quad">立体</string>
    <string name="game_sphere">球体</string>
    <string name="game_sure">确定</string>

</resources>
