<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_linearlayout_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="top|center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_wifi"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/btn_wifi"
                android:layout_marginTop="71dp"
                android:text="@string/connect_mode"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn_wifi"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/btn_bluetooth"
                android:layout_alignStart="@+id/btn_bluetooth"
                android:layout_below="@+id/textView"
                android:layout_marginTop="50dp"
                android:text="@string/connect_wifi"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_bluetooth"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_below="@+id/btn_wifi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/connect_bluetooth"
                android:textSize="20sp" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_back" />

    </LinearLayout>


</LinearLayout>