<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_alignParentRight="true" >

    
    <View
       	android:id="@+id/empty"
		android:layout_width="match_parent"
		android:layout_height="10dp"
		android:background="#dddddd"/>
	    
	<RelativeLayout
		android:id="@+id/gameroom_my_user"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		
		android:layout_below="@id/empty"
		android:background="@color/white" >

		<ImageView
		    android:id="@+id/gameroom_my_avatar"
		    android:layout_width="50dp"
		    android:layout_height="50dp"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="10dp"
		    android:adjustViewBounds="true"
		    android:background="@drawable/corners_avatar"
		    android:contentDescription="@string/app_name" />

		<TextView
			android:id="@+id/gameroom_my_name"
			android:layout_toRightOf="@+id/gameroom_my_avatar"
			android:layout_alignBottom="@+id/gameroom_my_avatar"
		    android:layout_marginLeft="10dp"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:textSize="30sp" />


		<LinearLayout
			android:id="@+id/gameroom_layout_gender"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/gameroom_my_name"
			android:layout_alignBottom="@+id/gameroom_my_name"
			android:layout_marginBottom="4dp"
			android:gravity="center"
			android:orientation="horizontal"
			android:layout_marginRight="20dp"
			android:paddingTop="4dip"
			android:paddingBottom="4dip"
			android:paddingLeft="4dip"
			android:paddingRight="4dip" >

			<ImageView
				android:id="@+id/gameroom_my_gender"
				android:layout_width="12dip"
				android:layout_height="12dip"
				android:contentDescription="@string/app_name"
				android:scaleType="fitXY" />

		</LinearLayout>
		
		<TextView
			android:id="@+id/gameroom_my_order"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:layout_marginRight="10dp"
			android:textColor="@color/text_color"
			android:textSize="18sp" />
		
	</RelativeLayout>

	<View
       	android:id="@+id/empty2"
		android:layout_width="match_parent"
		android:layout_height="10dp"
		android:layout_below="@id/gameroom_my_user"
		android:background="#dddddd"/>
	
	<LinearLayout
		android:id="@+id/gameroom_playersnumber"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_below="@id/empty2"
		android:orientation="vertical"
		android:background="@drawable/ab_solid_dark_holo" >

		<TextView
			android:id="@+id/gameroom_tv_playersnumber"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:textSize="15sp" >
		</TextView>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/gameroom_tip"
			android:textSize="15sp" >
		</TextView>
	</LinearLayout>
	
	<com.example.administrator.puzzleGame.view.MultiListView
		android:id="@+id/friends_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/gameroom_playersnumber"
		android:layout_above="@+id/gameroom_footer"
		android:cacheColorHint="@color/transparent"
		android:divider="@null"
		android:fadingEdge="none"
		android:listSelector="@drawable/list_selector_transition" />


	<LinearLayout
		android:id="@id/gameroom_footer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@drawable/bg_unlogin_bar"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingBottom="4dip"
		android:paddingLeft="8dip"
		android:paddingRight="8dip"
		android:paddingTop="4dip" >

	    
		<Button
			android:id="@+id/gameroom_create"
			android:layout_width="wrap_content"
			android:layout_height="42dp"
			android:layout_marginRight="9dip"
			android:layout_weight="1"
			android:background="@drawable/btn_bottombar_red"
			android:gravity="center"
			android:text="@string/gameroom_create"
			android:textColor="@drawable/profile_bottom_text_color"
			style="?android:attr/borderlessButtonStyle"
			android:textSize="14sp" />
		
		<Button
			android:id="@+id/gameroom_ready"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="42dp"
			android:layout_marginRight="9dip"
			android:layout_weight="1"
			android:background="@drawable/btn_bottombar_red"
			android:gravity="center"
			android:text="@string/gameroom_ready"
			android:textColor="@drawable/profile_bottom_text_color"
			style="?android:attr/borderlessButtonStyle"
			android:textSize="14sp" />


		<Button
			android:id="@+id/gameroom_start"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="42dp"
			android:layout_marginLeft="9dip"
			android:layout_weight="1"
			android:background="@drawable/btn_red"
			android:gravity="center"
			android:text="@string/gameroom_start"
			android:textColor="@drawable/profile_bottom_text_color"
			style="?android:attr/borderlessButtonStyle"
			android:textSize="14sp" />
	</LinearLayout>
	
</RelativeLayout>